2014-08-07  Kaz Kylheku  <kaz@kylheku.com>

	* parser.l (yyerr): Function removed; it is not used in the lexer,
	and converted to a macro in the parser.

	* parser.y (define_transform): take a parser argument rather
	than scanner. Set up scnr local variable for yyerr macro.
	Remove scnr argument from macro calls.
	(yyerr): New macro.
	(grammar): Remove scnr argument from yyerr calls.

2014-08-07  Kaz Kylheku  <kaz@kylheku.com>

	Reentrant parser regression

	* parser.y (yybadtok): New macro.
	(yybadtoken): Function must take parser argument.
	(grammar): Replace uses of yybadtoken with yybadtok.

	* parser.h (yybadtoken): Declaration updated.

	* parser.l (grammar): Fix incorrect yyprepf calls
	that are missing the yyscanner parameter.

2014-08-05  Kaz Kylheku  <kaz@kylheku.com>

	Version 94.

	* RELNOTES: Updated.

	* configure, txr.1: Bumped version.

	* share/txr/stdlib/ver.txr: Likewise

	* txr.vim, dep.mk: Updated.

2014-08-05  Kaz Kylheku  <kaz@kylheku.com>

	* rand.c (make_random_state): Make the seeding behavior
	portable when the seed is a fixnum or bignum. The goal is that the same
	values of seed should produce the same random sequences on any
	platform.

2014-08-05  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Fix incorrect registration of
	random-fixnum, which doesn't allow it to be called
	with no arguments.

2014-08-05  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y: Back port from Berkeley Yacc to GNU Bison.
	We need a prototype of yylex that is in scope of the grammar,
	but YYSTYPE is not defined there.

	* parser.l: Bison 3 declares yyparse in y.tab.h, so we have to
	reorder some #includes.

2014-08-02  Kaz Kylheku  <kaz@kylheku.com>

	Big switch to reentrant lexing and parsing.

	* parser.l (YY_INPUT): Stop relying on removed yyin_stream;
	refer to stream via yyextra.
	(yyin_stream, lineno, errors, spec_file_str,
	prepared_error_message): Global variables removed.
	(yyget_column, yyset_column): Missing prototypes not generated by flex